Fix FB like button nav bar alignment

--- a/app/assets/stylesheets/nav.css.scss
+++ b/app/assets/stylesheets/nav.css.scss
@@ -1,4 +1,3 @@
 .navbar-like-button {
-    line-height: 40px;
-    padding-top: 10px;
+    line-height: 35px;
 }
